--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -21,8 +21,8 @@
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "graphql-tag": "^2.12.6",
-    "io-ts": "^2.2.22",
-    "jsonwebtoken": "^9.0.2"
+    "hashids": "^2.3.0",
+    "io-ts": "^2.2.22"
   },
   "scripts": {
     "start": "node dist/server.js",
