--- a/packages/hasura/metadata/databases/default/tables/public_shortcuts.yaml
+++ b/packages/hasura/metadata/databases/default/tables/public_shortcuts.yaml
@@ -60,3 +60,14 @@ delete_permissions:
         user_id:
           _eq: X-Hasura-User-Id
     comment: ""
+event_triggers:
+  - name: shortcut_insert
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{HASURA_GRAPHQL_SHORTCUT_INSERT_WEBHOOK_URL}}'
