--- a/packages/gateway/nginx.conf
+++ b/packages/gateway/nginx.conf
@@ -10,6 +10,9 @@ server {
     listen 80;
     server_name localhost;
 
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Real-IP $remote_addr;
+
     location /app {
         proxy_pass http://frontend;
     }
