--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
-    "@headlessui/react": "^1.7.18",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@urql/exchange-auth": "^1.0.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
