--- a/packages/hasura/metadata/databases/default/tables/public_shortcut_visits.yaml
+++ b/packages/hasura/metadata/databases/default/tables/public_shortcut_visits.yaml
@@ -11,3 +11,21 @@ configuration:
     created_at: createdAt
     shortcut_id: shortcutId
   custom_root_fields: {}
+object_relationships:
+  - name: shortcut
+    using:
+      foreign_key_constraint_on: shortcut_id
+select_permissions:
+  - role: user
+    permission:
+      columns:
+        - id
+        - shortcut_id
+        - ip
+        - created_at
+      filter:
+        shortcut:
+          user_id:
+            _eq: X-Hasura-User-Id
+      allow_aggregations: true
+    comment: ""
