--- a/packages/gateway/nginx.conf
+++ b/packages/gateway/nginx.conf
@@ -6,9 +6,15 @@ upstream redirector {
     server redirector:4040;
 }
 
+limit_req_zone $realip_remote_addr zone=redirector_limit:10m rate=10r/s;
+
 server {
     listen 80;
     server_name localhost;
+
+    set_real_ip_from 0.0.0.0/0;
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
 
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Real-IP $remote_addr;
@@ -22,6 +28,7 @@ server {
     }
 
     location ~ ^/[a-zA-Z0-9]+$ {
+        limit_req zone=redirector_limit burst=20 nodelay;
         proxy_pass http://redirector;
     }
 }
