--- a/packages/hasura/Dockerfile
+++ b/packages/hasura/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /home/node/hasura
 COPY packages/hasura /home/node/hasura
 COPY packages/backend /home/node/backend
 COPY packages/frontend /home/node/frontend
+COPY packages/redirector /home/node/redirector
 
 RUN yarn global add wait-on
 RUN yarn
